frontend/test/should_fail/mismatch_of_match_type_with_match_class_type.grg
match class Foo
{
	def var i:int;
}

test foo implements Foo
{
---
	def var i:int;
}

match filter filterRemoveNonMatching<Foo>(var i:int)
{
	for(m:match<foo> in this)
	{
		if(m.i != i) {
			m = null; 
		}
	}
}

